fixed country details left alignment issue on mobile

--- a/src/components/CountryDetails.css
+++ b/src/components/CountryDetails.css
@@ -1,3 +1,4 @@
+
 .flag-details-container {
   padding: 0px 20px;
   height: auto;
@@ -7,6 +8,7 @@
   justify-content: center;
   align-items: center;
 }
+
 
 .flag-img {
   width: 100%;
@@ -21,7 +23,6 @@
   font-size: 28px;
   text-align: left;
   padding-bottom: 20px;
-  font-weight: 800;
 }
 
 @media (min-width: 768px) {
@@ -36,11 +37,12 @@
   }
 }
 
+
 .country-details {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: left;
 }
 
 @media (min-width: 768px) {
@@ -69,7 +71,7 @@
 
 @media (min-width: 1024px) {
   .country-details-right {
-    padding-top: 40px;
+    padding-top: 80px;
   }
 }
 
@@ -85,7 +87,7 @@
   justify-content: center;
   text-align: left;
   margin-top: 20px;
-  padding-left: 0;
+  padding-left: 20px;
 }
 
 @media (min-width: 768px) {
@@ -122,6 +124,7 @@
     padding-left: 50px;
   }
 }
+
 
 p {
   font-size: 14px;
